test/tests/compiler/14_pointers/invalid_types/bad_null_pointer_constant.plx
pub fn main(none) i32 {
    #  only integers can be null pointer constants
    x: *i32 = 0.0
    return 0
}
